# mcp-cendoj

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  pyproject.toml
.github/agents/: adr-writer.agent.md  agents-updater.agent.md  arch-researcher.agent.md  architecture-reviewer.md  brainstorm.agent.md  bs-critic.agent.md  bs-optimist.agent.md  bs-realist.agent.md  code-explorer.agent.md  code-reviewer.md  create-mr.agent.md  cross-platform-reviewer.agent.md  cross-platform-specialist.agent.md  database-analyst.agent.md  db-migration-reviewer.agent.md  dependency-researcher.agent.md  design-system-researcher.agent.md  design-system-reviewer.agent.md  devops-specialist.agent.md  integration-researcher.agent.md  integration-reviewer.agent.md  native-app-reviewer.agent.md  performance-reviewer.agent.md  plan-challenger.agent.md  plan-execute.agent.md  plan-start.agent.md  plan-validate.agent.md  planner.agent.md  planning-coordinator.agent.md  quality-fixer-smoke.agent.md  quality-fixer.agent.md  research.agent.md  security-analyst.agent.md  security-auditor.md  security-reviewer.agent.md  test-analyzer.agent.md  test-writer.md  ux-reviewer.agent.md
.github/hooks/: agents-md-staleness.json  auto-lint.json  guard-destructive.json  session-context.json
.github/hooks/scripts/: agents-md-staleness.sh  auto-lint.sh  clean-finish.sh  guard-destructive.sh  post-commit-agents-md.sh  session-context.sh
.github/prompts/: brainstorm-deepen.prompt.md  brainstorm.prompt.md  cmd-pr.prompt.md  cmd-refactor.prompt.md  plan-execute.prompt.md  plan-start.prompt.md  plan-validate.prompt.md
.github/workflows/: ci.yml
docs/: licensing.md  parser-coverage-analysis.md
docs/adr/: ADR-0001-fastmcp-over-low-level-server.md  ADR-0002-cendoj-http-integration-strategy.md  ADR-0003-provenance-envelope-design.md  ADR-0004-section-extraction-scope.md  ADR-0005-resource-uri-template-scheme.md  ADR-0006-extended-parser-scope-and-auto-format.md  ADR-0007-empty-results-contract.md
docs/plans/: plan-cendoj-mcp-server.md  plan-coverage-gate-local.md  plan-fix-resource-uri-template.md  plan-integration-test-foundation.md
docs/plans/completed/: plan-cendoj-mcp-server.md  plan-coverage-gate-local.md  plan-integration-test-foundation.md  plan-parser-coverage-expansion.md  plan-python-tooling.md  plan-search-empty-results.md
docs/plans/metrics/: cendoj-mcp-server.json  coverage-gate-local.json  fix-resource-uri-template.json  integration-test-foundation.json  parser-coverage-expansion.json  python-tooling.json  search-empty-results.json
src/mcp_cendoj/: __init__.py  cache.py  constants.py  http.py  models.py  parser.py
src/mcp_cendoj/tools/: document.py  lookup.py  normas.py  search.py  superseded.py
tests/: conftest.py  test_cache.py  test_http.py  test_main.py  test_mcp_integration.py  test_models.py
tests/fixtures/: an_sentence.txt  ecli_lookup.html  search_full.html  search_results.html  ts_ruling.txt  ts_sentence.txt  tsj_auto.txt  tsj_ruling.txt  tsj_sentence.txt
tests/tools/: test_document.py  test_lookup.py  test_normas.py  test_parser.py  test_search.py  test_superseded.py
